@@ -9,10 +9,10 @@ import java.sql.SQLException;
 import java.util.LinkedList;
 import java.util.ResourceBundle;
 
-public class ConnectionProxy extends DataSourceAdapter{
-    private static int initConnections = 5;
-    private static int poolMaxIdleConnections = 10;//空闲池允许的最大的连接数量
-    private static int poolMaxActiveConnections = 10;
+public class MyDataSource extends DataSourceAdapter{
+    private static final int initConnections = 5;
+    private static final int poolMaxIdleConnections = 10;//空闲池允许的最大的连接数量
+    private static final int poolMaxActiveConnections = 10;
     private static LinkedList<Connection> idleConnections = new LinkedList<>();//空闲的连接池
     private static LinkedList<Connection> activeConnections = new LinkedList<>();//激活的连接池
 
@@ -30,7 +30,7 @@ public class ConnectionProxy extends DataSourceAdapter{
             for (int i = 0; i < initConnections; i++) {
                 idleConnections.addFirst(DriverManager.getConnection(url, username, password));
             }
-            System.out.println("初始化后空闲连接池:"+idleConnections.size()+"  激活连接池:"+activeConnections.size());
+//            System.out.println("初始化----空闲:"+idleConnections.size()+"  激活:"+activeConnections.size());
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -44,7 +44,7 @@ public class ConnectionProxy extends DataSourceAdapter{
             synchronized (monitor){
                 //如果空闲连接池不为空，直接获取连接
                 if(!idleConnections.isEmpty()){
-                    conn = idleConnections.remove(0);
+                    conn = idleConnections.removeLast();
                 }else{
                     //没有空闲连接可以使用，那么我们需要获取新的连接(也就是需要传建一个连接)
                     if(activeConnections.size() < poolMaxActiveConnections){
@@ -54,26 +54,28 @@ public class ConnectionProxy extends DataSourceAdapter{
                     }
                     //否则是不能创建新连接的，需要等待，wait
                 }
-            }
 
-            if(conn == null){
-                try {
-                    monitor.wait();
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                    //线程给打断则跳出循环
-                    break;
+                if(conn == null){
+                    try {
+//                        System.out.println(Thread.currentThread().getName()+"等待"+"  空闲:"+idleConnections.size()
+//                                +"  激活:"+activeConnections.size());
+                        monitor.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                        //线程给打断则跳出循环
+                        break;
+                    }
+                }else{
+                    //对象不为空，说明已经拿到了该连接
+                    activeConnections.add(conn);
+//                    System.out.println(Thread.currentThread().getName() + "拿到----"+conn+"  空闲:"+idleConnections.size()
+//                            +"  激活:"+activeConnections.size());
                 }
-            }
+            }//synchronized end
 
         }
 
-        if(conn != null){
-            //对象不为空，说明已经拿到了该连接
-            activeConnections.add(conn);
-            System.out.println("得到连接后空闲连接池:"+idleConnections.size()+"  激活连接池:"+activeConnections.size());
-        }
-        //返回连接对象
+        //返回连接代理对象
         Connection finalConn = conn;
         return (Connection) Proxy.newProxyInstance(Connection.class.getClassLoader(), new Class[]{Connection.class},
                 new InvocationHandler() {
@@ -87,7 +89,8 @@ public class ConnectionProxy extends DataSourceAdapter{
                                 }
                                 monitor.notifyAll();
 
-                                System.out.println("关闭连接后空闲连接池:"+idleConnections.size()+"  激活连接池:"+activeConnections.size());
+//                                System.out.println(Thread.currentThread().getName()+"归还   "+finalConn+
+//                                        "   空闲:"+idleConnections.size()+"  激活:"+activeConnections.size());
                             }
                         } else {
                             return method.invoke(finalConn, args);
@@ -96,20 +99,6 @@ public class ConnectionProxy extends DataSourceAdapter{
                     }
                 });
 
-//        Connection conn = idleConnections.removeLast();
-//        //返回代理
-//        return (Connection) Proxy.newProxyInstance(conn.getClass().getClassLoader(), new Class[]{Connection.class},
-//                new InvocationHandler() {
-//                    @Override
-//                    public Object invoke(Object o, Method method, Object[] args) throws Throwable {
-//                        if ("close".equals(method.getName())) {
-//                            idleConnections.addFirst(conn);
-//                        } else {
-//                            return method.invoke(conn, args);
-//                        }
-//                        return null;
-//                    }
-//                });
     }
 
 }
